src/index.css
@font-face {
  font-family: 'Nunito Sans', sans-serif;
  src: url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,600;0,800;1,300&display=swap');
}

* {
  font-family: 'Nunito Sans', sans-serif;
}

